@@ -509,3 +509,44 @@ function checkServiceTime(array $serviceTime) {
 		throw new APIException(ZBX_API_ERROR_PARAMETERS, _('Service start time must be less than end time.'));
 	}
 }
+
+/**
+ * Method to sort list of Services by 'sortorder' field and then by 'name' field if more entries has same 'sortorder'
+ * value. Separate method is needed because entries make multilevel hierarchy and branches also must be sorted according
+ * fields 'sortorder' and 'name'.
+ *
+ * @param array $services
+ *
+ * @return void
+ */
+function sortServices(array &$services) {
+	$sort_options = [
+		['field' => 'sortorder', 'order' => ZBX_SORT_UP],
+		['field' => 'name', 'order' => ZBX_SORT_UP]
+	];
+
+	// Put dependent services in separate array just to avoid them to be sorted before right time.
+	$dependent_services = [];
+	foreach ($services as $serviceid => $service) {
+		if ($service['parent']) {
+			$dependent_services[$serviceid] = $service;
+			unset($services[$serviceid]);
+		}
+	}
+
+	// Sort first level entries.
+	CArrayHelper::sort($services, $sort_options);
+	$services += $dependent_services;
+
+	// Sort dependencies.
+	foreach ($services as &$service) {
+		if ($service['dependencies']) {
+			$service['dependencies'] = array_map(function($dependent_item) use($services) {
+				return $dependent_item + ['name' => $services[$dependent_item['serviceid']]['name']];
+			}, $service['dependencies']);
+
+			CArrayHelper::sort($service['dependencies'], $sort_options);
+		}
+	}
+	unset($service);
+}
